--- a/stylesheets/_web-app-theme.scss
+++ b/stylesheets/_web-app-theme.scss
@@ -41,110 +41,114 @@
   #header {
     position: relative;
     padding-top: 1px;
-  }
 
-  #header h1 {
-    margin: 0;
-    padding: 10px 0;
-    font-size: 26px;
-  }
+    h1 {
+      margin: 0;
+      padding: 10px 0;
+      font-size: 26px;
 
-  #header h1 a:link, #header h1 a:active, #header h1 a:hover, #header h1 a:visited {
-    text-decoration: none;
+      a:link, a:active, a:hover, a:visited {
+        text-decoration: none;
+      }
+    }
   }
 
   #main {
     width: 70%;
     float: left;
+
+    .block {
+      margin-bottom: 20px;
+      padding-top: 1px;
+    }
+
+    .block .content .inner {
+      padding: 0 15px 15px;
+    }
+
+    .main p.first {
+      margin-top: 0;
+    }
   }
 
   .actions-bar {
     padding: 10px 1px;
+
+    .actions {
+      float: left;
+    }
+
+    .pagination {
+      float: right;
+      padding: 1px 0;
+    }
   }
 
-  .actions-bar .actions {
-    float: left;
-  }
-
-
-  .actions-bar .pagination {
-    float: right;
-    padding: 1px 0;
-  }
 
   #sidebar {
     width: 25%;
     float: right;
+
+    h3 {
+      padding: 10px 15px;
+      margin: 0;
+      font-size: 13px;
+    }
+
+    .block {
+      margin-bottom: 20px;
+      padding-bottom: 10px;
+    }
+
+    .block .content {
+      padding: 0 15px;
+    }
+
+    ul.navigation li a:link, ul.navigation li a:visited {
+      display: block;
+      padding: 10px 15px;
+    }
+
+    .block .sidebar-block, .notice {
+      padding:10px;
+    }
   }
 
-  #sidebar h3 {
-    padding: 10px 15px;
-    margin: 0;
-    font-size: 13px;
-  }
-
-  #sidebar .block {
-    margin-bottom: 20px;
-    padding-bottom: 10px;
-  }
-
-  #sidebar .block .content {
-    padding: 0 15px;
-  }
-
-  #sidebar ul.navigation li a:link, #sidebar ul.navigation li a:visited {
-    display: block;
-    padding: 10px 15px;
-  }
-
-  #sidebar .block .sidebar-block, #sidebar .notice {
-    padding:10px;
-  }
 
   #wrapper {
     padding-top: 20px;
-  }
-
-  #main .block {
-    margin-bottom: 20px;
-    padding-top: 1px;
-  }
-
-  #main .block .content .inner {
-    padding: 0 15px 15px;
-  }
-
-  #main .main p.first {
-    margin-top: 0;
   }
 
   #user-navigation {
     position: absolute;
     top: 0px;
     right: 20px;
+
+    ul li {
+      padding: 5px 10px;
+    }
   }
 
   #main-navigation {
     width: 100%;
+
+    ul li {
+      margin-right: 5px;
+
+      a {
+        font-size: 14px;
+        line-height: 14px;
+        display: block;
+        padding: 8px 15px;
+      }
+    }
   }
 
-  #user-navigation ul, #main-navigation ul, .secondary-navigation ul, #sidebar ul.navigation {
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-  }
 
   #user-navigation ul li, #main-navigation ul li, .secondary-navigation ul li {
     float: left;
   }
 
-  #main-navigation ul li {
-    margin-right: 5px;
-  }
-
-  #user-navigation ul li {
-    padding: 5px 10px;
-  }
 
   #main-navigation ul li a:link, #main-navigation ul li a:visited, #main-navigation ul li a:hover, #main-navigation ul li a:active,
   .secondary-navigation ul li a:link, .secondary-navigation ul li a:visited, .secondary-navigation ul li a:hover, .secondary-navigation ul li a:active,
@@ -152,23 +156,18 @@
     text-decoration: none;
   }
 
-  #main-navigation ul li a {
-    font-size: 14px;
-    line-height: 14px;
-    display: block;
-    padding: 8px 15px;
-  }
 
   .secondary-navigation {
     font-size: 13px;
     border-bottom-width: 10px;
     border-bottom-style: solid;
+
+    ul li a {
+      display: block;
+      padding: 10px 15px;
+    }
   }
 
-  .secondary-navigation ul li a {
-    display: block;
-    padding: 10px 15px;
-  }
 
   #footer {
     padding-bottom: 20px;
@@ -176,21 +175,23 @@
 
   /* pagination */
 
-  .pagination a, .pagination span, .pagination em {
-    padding: 2px 5px;
-    margin-right: 5px;
-    display: block;
-    float: left;
-    border-style: solid;
-    border-width: 1px;
-  }
+  .pagination {
+    a, span, em {
+      padding: 2px 5px;
+      margin-right: 5px;
+      display: block;
+      float: left;
+      border-style: solid;
+      border-width: 1px;
+    }
 
-  .pagination em {
-    font-weight: bold;
-  }
+    em {
+      font-weight: bold;
+    }
 
-  .pagination a {
-    text-decoration: none;
+    a {
+      text-decoration: none;
+    }
   }
 
   /* tables */
@@ -198,32 +199,32 @@
     width: 100%;
     border-collapse: collapse;
     margin-bottom: 15px;
-  }
 
-  .table th {
-    padding: 10px;
-    font-weight: bold;
-    text-align: left;
-  }
+    th {
+      padding: 10px;
+      font-weight: bold;
+      text-align: left;
+    }
 
-  .table th.first {
-    width: 30px;
-  }
+    th.first {
+      width: 30px;
+    }
 
-  .table th.last {
-    width: 200px;
-  }
+    th.last {
+      width: 200px;
+    }
 
-  .table .checkbox {
-    margin-left: 10px;
-  }
+    .checkbox {
+      margin-left: 10px;
+    }
 
-  .table td {
-    padding: 10px;
-  }
+    td {
+      padding: 10px;
+    }
 
-  .table td.last {
-    text-align: right;
+    td.last {
+      text-align: right;
+    }
   }
 
   /* forms */
@@ -233,68 +234,73 @@
     padding: 0;
   }
 
-  .form .group {
-    margin-bottom: 15px;
-  }
 
-  .form div.left {
-    width: 20%;
-    float: left;
-  }
+  .form {
+    .group {
+      margin-bottom: 15px;
+    }
 
-  .form div.right {
-    width: 75%;
-    float: right;
-  }
+    div.left {
+      width: 20%;
+      float: left;
+    }
 
-  .form .columns .column {
-    width: 48%;
-  }
+    div.right {
+      width: 75%;
+      float: right;
+    }
 
-  .form .columns .left {
-    float: left;
-  }
+    .columns {
+      .column {
+        width: 48%;
+      }
 
-  .form .columns .right {
-    float: right;
-  }
+      .left {
+        float: left;
+      }
 
-  .form label.label, .form input.text_field, .form textarea.text_area {
-    font-size: 1.2em;
-    padding: 1px 0;
-    margin: 0;
-  }
+      .right {
+        float: right;
+      }
+    }
 
-  .form label.right {
-    text-align: right;
-  }
+    label.label, input.text_field, textarea.text_area {
+      font-size: 1.2em;
+      padding: 1px 0;
+      margin: 0;
+    }
 
-  .form input.checkbox, .form input.radio {
-    margin-right: 5px;
-  }
+    label.right {
+      text-align: right;
+    }
 
-  .form label.checkbox, .form label.radio {
-    line-height: 1.5em;
-  }
+    input.checkbox, input.radio {
+      margin-right: 5px;
+    }
 
-  .form label.label {
-    display: block;
-    padding-bottom: 2px;
-    font-weight: bold;
-  }
+    label.checkbox, label.radio {
+      line-height: 1.5em;
+    }
 
-  .form div.fieldWithErrors label.label {
-    display: inline;
-  }
+    label.label {
+      display: block;
+      padding-bottom: 2px;
+      font-weight: bold;
+    }
 
-  .form .fieldWithErrors .error {
-    color: red;
-  }
+    div.fieldWithErrors label.label {
+      display: inline;
+    }
 
-  .form input.text_field, .form textarea.text_area {
-    width: 100%;
-    border-width: 1px;
-    border-style: solid;
+    .fieldWithErrors .error {
+      color: red;
+    }
+
+    input.text_field, textarea.text_area {
+      width: 100%;
+      border-width: 1px;
+      border-style: solid;
+    }
   }
 
   /* lists */
@@ -303,52 +309,54 @@
     margin: 0;
     padding: 0;
     list-style-type: none;
+
+    li {
+      clear: left;
+      padding-bottom: 5px;
+
+      .left {
+        float: left;
+
+        .avatar {
+          width: 50px;
+          height: 50px;
+        }
+      }
+
+      .item {
+        margin-left: 80px;
+
+        .avatar {
+          float: left;
+          margin: 0 5px 5px 0;
+          width: 30px;
+          height: 30px;
+        }
+      }
+    }
   }
 
-  ul.list li {
-    clear: left;
-    padding-bottom: 5px;
-  }
-
-  ul.list li .left {
-    float: left;
-  }
-
-  ul.list li .left .avatar {
-    width: 50px;
-    height: 50px;
-  }
-
-  ul.list li .item {
-    margin-left: 80px;
-  }
-
-  ul.list li .item .avatar {
-    float: left;
-    margin: 0 5px 5px 0;
-    width: 30px;
-    height: 30px;
-  }
 
   /* box */
 
   #box {
     width: 500px;
     margin: 50px auto;
+
+    .block {
+      margin-bottom: 20px;
+
+      h2 {
+        padding: 10px 15px;
+        margin: 0;
+      }
+
+      .content {
+        padding: 10px 20px;
+      }
+    }
   }
 
-  #box .block {
-    margin-bottom: 20px;
-  }
-
-  #box .block h2 {
-    padding: 10px 15px;
-    margin: 0;
-  }
-
-  #box .block .content {
-    padding: 10px 20px;
-  }
 
   /*  Inspired by http://particletree.com/features/rediscovering-the-button-element */
 
@@ -372,6 +380,7 @@
     overflow:visible;
     padding:4px 10px 3px 7px; /* IE6 */
   }
+
   button.button[type] {
     padding:5px 10px 5px 7px; /* Firefox */
     line-height:17px; /* Safari */
