Use the compass clearfix solution instead of wat-cf

--- a/stylesheets/_web-app-theme.scss
+++ b/stylesheets/_web-app-theme.scss
@@ -1,21 +1,8 @@
+@import "compass/utilities/general/clearfix";
+
 @mixin web-app-theme {
   * {margin:0;padding:0}
   .clear { clear: both; height: 0; }
-
-  .wat-cf:after {
-       content: ".";
-       display: block;
-       height: 0;
-       clear: both;
-       visibility: hidden;
-  }
-
-  .wat-cf {display: inline-block;}
-
-  /* Hides from IE-mac \*/
-  * html .wat-cf {height: 1%;}
-  .wat-cf {display: block;}
-  /* End hide from IE-mac */
 
   h1 { margin: 15px 0; font-size: 22px; font-weight: normal; }
   h2 { font-size: 22px; margin: 15px 0; font-weight: normal;}
@@ -72,6 +59,8 @@
   }
 
   .actions-bar {
+    @include clearfix;
+
     padding: 10px 1px;
 
     .actions {
@@ -130,6 +119,8 @@
   }
 
   #main-navigation {
+    @include clearfix;
+
     width: 100%;
 
     ul li {
@@ -162,9 +153,13 @@
     border-bottom-width: 10px;
     border-bottom-style: solid;
 
-    ul li a {
-      display: block;
-      padding: 10px 15px;
+    ul {
+      @include clearfix;
+
+      li a {
+        display: block;
+        padding: 10px 15px;
+      }
     }
   }
 
@@ -300,6 +295,10 @@
       width: 100%;
       border-width: 1px;
       border-style: solid;
+    }
+
+    .navform {
+      @include clearfix;
     }
   }
 
