--- a/stylesheets/web-app-theme/themes/_drastic-dark.scss
+++ b/stylesheets/web-app-theme/themes/_drastic-dark.scss
@@ -257,7 +257,7 @@
       color: #666666;
     }
 
-    input.text_field, textarea.text_area {
+    input.text_field, textarea {
       width: 100%;
       border: 1px solid #cfcfcf;
     }
