Get rid of the checkbox and radio classes on inputs

--- a/stylesheets/_web-app-theme.scss
+++ b/stylesheets/_web-app-theme.scss
@@ -224,7 +224,7 @@
 
   /* forms */
 
-  input.checkbox {
+  input[type=checkbox] {
     margin: 0;
     padding: 0;
   }
@@ -269,7 +269,7 @@
       text-align: right;
     }
 
-    input.checkbox, input.radio {
+    input[type=checkbox], input[type=radio] {
       margin-right: 5px;
     }
 
