--- a/stylesheets/web-app-theme/themes/_drastic-dark.scss
+++ b/stylesheets/web-app-theme/themes/_drastic-dark.scss
@@ -235,7 +235,7 @@
 
   /* tables */
 
-  .table {
+  table {
     th {
       background: #36393d;
       color: #FFF;
@@ -247,6 +247,11 @@
 
     tr.even {
       background: #ebebeb;
+    }
+
+    th.last {
+      -moz-border-radius-topright: 4px;
+      -webkit-border-top-right-radius: 4px;
     }
   }
 
@@ -353,15 +358,11 @@
     -webkit-border-top-right-radius: 4px;
   }
 
-  .secondary-navigation li.first a, .secondary-navigation ul li.first, .table th.first, .table th.first {
+  .secondary-navigation li.first a, .secondary-navigation ul li.first, table th.first, table th.first {
     -moz-border-radius-topleft: 4px;
     -webkit-border-top-left-radius: 4px;
   }
 
-  .table th.last {
-    -moz-border-radius-topright: 4px;
-    -webkit-border-top-right-radius: 4px;
-  }
 
   .secondary-navigation ul li.first {
     -moz-border-radius-topleft: 4px;
