--- a/stylesheets/_web-app-theme.scss
+++ b/stylesheets/_web-app-theme.scss
@@ -53,7 +53,7 @@
       padding: 0 15px 15px;
     }
 
-    .main p.first {
+    .main p:first-child {
       margin-top: 0;
     }
   }
@@ -201,7 +201,7 @@
       text-align: left;
     }
 
-    th.first {
+    th:first-child {
       width: 30px;
     }
 
