--- a/stylesheets/web-app-theme/themes/_drastic-dark.scss
+++ b/stylesheets/web-app-theme/themes/_drastic-dark.scss
@@ -249,7 +249,7 @@
       background: #ebebeb;
     }
 
-    th.last {
+    th:last-child {
       -moz-border-radius-topright: 4px;
       -webkit-border-top-right-radius: 4px;
     }
