--- a/stylesheets/_web-app-theme.scss
+++ b/stylesheets/_web-app-theme.scss
@@ -296,10 +296,6 @@
       border-width: 1px;
       border-style: solid;
     }
-
-    .navform {
-      @include clearfix;
-    }
   }
 
   /* lists */
@@ -403,5 +399,9 @@
 
   button.button:active, a.button:active {
     background-color:#e5e5e5;
+  }
+
+  .navbuttons {
+    @include clearfix;
   }
 }
