--- a/stylesheets/_web-app-theme.scss
+++ b/stylesheets/_web-app-theme.scss
@@ -259,7 +259,7 @@
       }
     }
 
-    label, input[type=text], textarea {
+    label, input[type=text], input[type=password], input[type=number], input[type=email], textarea {
       font-size: 1.2em;
       padding: 1px 0;
       margin: 0;
@@ -291,7 +291,7 @@
       color: red;
     }
 
-    input[type=text], textarea {
+    input[type=text], input[type=password], input[type=number], input[type=email], textarea {
       width: 100%;
       border-width: 1px;
       border-style: solid;
