Fix misspelled word

--- a/stylesheets/web-app-theme/themes/_drastic-dark.scss
+++ b/stylesheets/web-app-theme/themes/_drastic-dark.scss
@@ -26,7 +26,7 @@
     line-height: 1.6em;
   }
 
-  .hightlight {
+  .highlight {
     background-color: #ffff88;
     font-weight: bold;
     color: #36393d;
@@ -362,7 +362,6 @@
     -moz-border-radius-topleft: 4px;
     -webkit-border-top-left-radius: 4px;
   }
-
 
   .secondary-navigation ul li:first-child {
     -moz-border-radius-topleft: 4px;
