Change pagination styles for the default theme to work with how will_paginate generates links

--- a/stylesheets/web-app-theme/themes/_default.scss
+++ b/stylesheets/web-app-theme/themes/_default.scss
@@ -227,6 +227,11 @@
       background: #002134;
       color: #fff;
       border: 1px solid #002134;
+      text-align: center;
+      min-width: 15px;
+      margin-right: 5px;
+      padding: 6px;
+      border: 1px solid #c3c4ba;
     }
 
     a {
